# RAG_Next_JS

./: README.md
backend/: .env  chat_client.py  main.py  pyproject.toml
frontend/: package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/src/app/: globals.css  layout.tsx  loading.tsx  page.tsx
